create biz layer and data layer,update the wire file
