# real_world/kratos-realworld/api/realworld/v1/realworld.pb.go
@@ -2984,7 +2984,7 @@ var file_realworld_v1_realworld_proto_rawDesc = []byte{
 	0x61, 0x6c, 0x77, 0x6f, 0x72, 0x6c, 0x64, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x43, 0x6f,
 	0x6d, 0x6d, 0x65, 0x6e, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x72,
 	0x65, 0x61, 0x6c, 0x77, 0x6f, 0x72, 0x6c, 0x64, 0x2e, 0x76, 0x31, 0x2e, 0x53, 0x69, 0x6e, 0x67,
-	0x6c, 0x65, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x27,
+	0x6c, 0x65, 0x43, 0x6f, 0x6d, 0x6d, 0x65, 0x6e, 0x74, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x27,
 	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x21, 0x3a, 0x01, 0x2a, 0x22, 0x1c, 0x61, 0x70, 0x69, 0x2f, 0x61,
 	0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x2f, 0x7b, 0x73, 0x6c, 0x75, 0x67, 0x7d, 0x2f, 0x63,
 	0x6f, 0x6d, 0x6d, 0x65, 0x6e, 0x74, 0x73, 0x12, 0x7a, 0x0a, 0x0b, 0x47, 0x65, 0x74, 0x43, 0x6f,
@@ -3150,7 +3150,7 @@ var file_realworld_v1_realworld_proto_depIdxs = []int32{
 	8,  // 55: realworld.v1.RealWorld.CreateArticle:output_type -> realworld.v1.SingleArticleReply
 	8,  // 56: realworld.v1.RealWorld.UpdateArticle:output_type -> realworld.v1.SingleArticleReply
 	18, // 57: realworld.v1.RealWorld.DeleteArticle:output_type -> realworld.v1.DeleteArticleReply
-	8,  // 58: realworld.v1.RealWorld.AddComment:output_type -> realworld.v1.SingleArticleReply
+	23, // 58: realworld.v1.RealWorld.AddComment:output_type -> realworld.v1.SingleCommentReply
 	24, // 59: realworld.v1.RealWorld.GetComments:output_type -> realworld.v1.MultipleCommentsReply
 	24, // 60: realworld.v1.RealWorld.DeleteComments:output_type -> realworld.v1.MultipleCommentsReply
 	8,  // 61: realworld.v1.RealWorld.FavoriteArticle:output_type -> realworld.v1.SingleArticleReply
